added secont commit

--- a/index.html
+++ b/index.html
@@ -22,16 +22,59 @@
         <nav>
 
             <h3 class="name1 inter-font">Code<span class="text-primary">M</span>ythic</h3>
-            <a><button class="btn-1 .raleway-font">Sign up</button></a>
+            <a><button class="btn-1 raleway-font uni-btn">Sign up</button></a>
         </nav>
         <div class="home-content">
-            <h4 class="cnt-1 raleway-font">Next-Gen Dark UI Template Designed for <br> Webflow Teams</h4>
-            <a href=""><button class="btn-2">Stay With Us</button></a>
+            <p class="cnt-1 raleway-font">Next-Gen Dark UI Template Designed for <br> Webflow Teams</p>
+            <a href=""><button class="btn-2 uni-btn raleway-font">Stay With Us</button></a>
         </div>
     </header>
 
-    <main>
+    <main class="main-section">
+        <div class="main-section-1">
+            <div class="action-page">
+                <div class="cnt-2">
+                    <h1 class="raleway-font txt-1">See It in Action</h1>
+                    <h6 class="raleway-font txt-2">Explore the live preview and imagine your brand in this bold new
+                        look.
+                    </h6>
+                    <a href=""><button class="btn-3 uni-btn raleway-font">Launch Live Preview</button></a>
+                </div>
 
+                <img class="img-1" src="/Assets/wc-mini.png" alt="">
+            </div>
+        </div>
+        <div class="main-section-1">
+            <div class="joined-page">
+                <section class="sectn-1">
+                    <h2 class="raleway-font cnt-3">Joined Thousands of Productive Users</h2>
+                    <div class="cnt-4 inter-font">
+                        <div>
+                            <h1 class="txt-3">75K</h1>
+                            <h6 class="txt-4">Active Users</h6>
+                        </div>
+                        <div>
+                            <h1 class="txt-3" >3M+</h1>
+                            <h6 class="txt-4">Focus Sessions</h6>
+                        </div>
+                        <div>
+                            <h1 class="txt-3">96%</h1>
+                            <h6 class="txt-4">Satisfaction Rate </h6>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+           <div class="main-section-1">
+            <div class="riview-pg">
+                <section class="">
+                    <h2 class="raleway-font cnt-3">What our users say</h2>
+                    <div>
+    
+                    </div>
+                </section>
+            </div>
+        </div>
     </main>
 
     <footer>
