--- a/index.html
+++ b/index.html
@@ -30,55 +30,160 @@
         </div>
     </header>
 
-    <main class="main-section">
-        <div class="main-section-1">
-            <div class="action-page">
-                <div class="cnt-2">
-                    <h1 class="raleway-font txt-1">See It in Action</h1>
-                    <h6 class="raleway-font txt-2">Explore the live preview and imagine your brand in this bold new
-                        look.
-                    </h6>
-                    <a href=""><button class="btn-3 uni-btn raleway-font">Launch Live Preview</button></a>
-                </div>
+    <main class="main-section-1">
+        <!-- See It in Action page -->
+        <div class="action-page">
+            <div class="cnt-2">
+                <h1 class="raleway-font txt-1">See It in Action</h1>
+                <h6 class="raleway-font txt-2">Explore the live preview and imagine your brand in this bold new
+                    look.
+                </h6>
+                <a href=""><button class="btn-3 uni-btn raleway-font">Launch Live Preview</button></a>
+            </div>
+            <img class="img-1" src="/Assets/wc-mini.png" alt="">
+        </div>
 
-                <img class="img-1" src="/Assets/wc-mini.png" alt="">
-            </div>
-        </div>
-        <div class="main-section-1">
-            <div class="joined-page">
-                <section class="sectn-1">
-                    <h2 class="raleway-font cnt-3">Joined Thousands of Productive Users</h2>
-                    <div class="cnt-4 inter-font">
-                        <div>
-                            <h1 class="txt-3">75K</h1>
-                            <h6 class="txt-4">Active Users</h6>
-                        </div>
-                        <div>
-                            <h1 class="txt-3" >3M+</h1>
-                            <h6 class="txt-4">Focus Sessions</h6>
-                        </div>
-                        <div>
-                            <h1 class="txt-3">96%</h1>
-                            <h6 class="txt-4">Satisfaction Rate </h6>
-                        </div>
-                    </div>
-                </section>
-            </div>
-        </div>
-           <div class="main-section-1">
-            <div class="riview-pg">
-                <section class="">
-                    <h2 class="raleway-font cnt-3">What our users say</h2>
+
+        <!--  Joined Thousands of Productive Users page-->
+        <div class="joined-page">
+            <section class="sectn-1">
+                <h2 class="raleway-font cnt-3">Joined Thousands of Productive Users</h2>
+                <div class="cnt-4 inter-font">
                     <div>
-    
+                        <h1 class="txt-3">75K</h1>
+                        <h6 class="txt-4">Active Users</h6>
                     </div>
-                </section>
+                    <div>
+                        <h1 class="txt-3">3M+</h1>
+                        <h6 class="txt-4">Focus Sessions</h6>
+                    </div>
+                    <div>
+                        <h1 class="txt-3">96%</h1>
+                        <h6 class="txt-4">Satisfaction Rate </h6>
+                    </div>
+                </div>
+            </section>
+        </div>
+
+
+
+        <!-- review page -->
+        <div class="riview-pg inter-font">
+            <h2 class="raleway-font cnt-3">What our users say</h2>
+            <section class="cnt-5">
+                <!-- review box 1  -->
+                <div class="riv-1">
+                    <div>
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                    </div>
+                    <div>
+                        <h2 class="txt-6">Loved by Designers</h2>
+                        <p class="txt-7">This template instantly leveled up our presence.” – Studio Vertex</p>
+                    </div>
+                    <div class="txt-5">
+                        <img class="img-2" src="/Assets/avatar.png" alt="">
+                        <div>
+                            <h3>Sarah Miller</h3>
+                            <h4>Date: 01-02-23</h4>
+                        </div>
+                    </div>
+                </div>
+                <!-- review box 1  -->
+                <div class="riv-1">
+                    <div>
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                    </div>
+                    <div>
+                        <h2 class="txt-6">Loved by Designers</h2>
+                        <p class="txt-7">This template instantly leveled up our presence.” – Studio Vertex</p>
+                    </div>
+                    <div class="txt-5">
+                        <img class="img-2" src="/Assets/avatar.png" alt="">
+                        <div>
+                            <h3>David Williams</h3>
+                            <h4>Date: 12-05-24</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="riv-1">
+                    <div>
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                    </div>
+                    <div>
+                        <h2 class="txt-6">Loved by Designers</h2>
+                        <p class="txt-7">This template instantly leveled up our presence.” – Studio Vertex</p>
+                    </div>
+                    <div class="txt-5">
+                        <img class="img-2" src="/Assets/avatar.png" alt="">
+                        <div>
+                            <h3>Michael Johnson</h3>
+                            <h4>Date: 29-11-20</h4>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+
+
+        <!-- ready to focus page -->
+        <div class="cnt-6">
+            <div class="red-1">
+                <h1 class="raleway-font txt-8">Ready to focus better</h1>
+                <p class="raleway-font txt-9">This template instantly leveled up our presence.” – Studio Vertex</p>
+                <a href=""><button class="btn-4 uni-btn">Get Started free</button></a>
+            </div>
+            <div>
+                <img class="red-2" src="./Assets/wc-big.png" alt="">
+            </div>
+        </div>
+
+        <!-- get touch page  -->
+        <div class="get">
+            <div>
+                <h1 class="raleway-font txt-11">Let’s Get in <br> Touch</h1>
+            </div>
+            <div>
+                <form action="">
+                    <label for="">Email</label><br>
+                    <input type="email" placeholder="example@email.com"><br>
+
+                    <label for="">Name</label><br>
+                    <input type="text" placeholder="full name"><br>
+                    <label for="">Message</label><br>
+                    <textarea name="" id="" col="30" rows="10" placeholder="write your message"></textarea>
+                    <br><input:Submit class="uni-btn">Submit</input:Submit>
+
+                </form>
+
             </div>
         </div>
     </main>
 
     <footer>
-
+        <div>
+            <h3 class="name2 inter-font">Code<span class="text-primary">M</span>ythic</h3>
+            <h4 class="txt-10">Ready to elevate your online presence? Contact us today to discuss <br> your project and
+                discover how we can
+                bring your vision to life.</h4>
+        </div>
+        <div class="btn-5">
+            <a href="">Home</a>
+            <a class="fot-btn" href="">About</a>
+            <a class="fot-btn" href="">How to Works</a>
+            <a class="fot-btn" href="">Service</a>
+        </div>
     </footer>
 </body>
 
