--- a/index.html
+++ b/index.html
@@ -154,15 +154,15 @@
             <div>
                 <h1 class="raleway-font txt-11">Let’s Get in <br> Touch</h1>
             </div>
-            <div>
+            <div class="get2">
                 <form action="">
                     <label for="">Email</label><br>
-                    <input type="email" placeholder="example@email.com"><br>
+                    <input class="txt-15" type="email" placeholder="example@email.com"><br>
 
-                    <label for="">Name</label><br>
-                    <input type="text" placeholder="full name"><br>
+                    <label  for="">Name</label><br>
+                    <input class="txt-15" type="text" placeholder="full name"><br>
                     <label for="">Message</label><br>
-                    <textarea name="" id="" col="30" rows="10" placeholder="write your message"></textarea>
+                    <textarea class="txt-16" name="" id="" col="30" rows="10" placeholder="write your message"></textarea>
                     <br><input:Submit class="uni-btn">Submit</input:Submit>
 
                 </form>
