--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <input class="txt-15" type="text" placeholder="full name"><br>
                     <label for="">Message</label><br>
                     <textarea class="txt-16" name="" id="" col="30" rows="10" placeholder="write your message"></textarea>
-                    <br><input:Submit class="uni-btn">Submit</input:Submit>
+                    <br><input:Submit class="uni-btn btn-7">Submit</input:Submit>
 
                 </form>
 
