--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </h6>
                 <a href=""><button class="btn-3 uni-btn raleway-font">Launch Live Preview</button></a>
             </div>
-            <img class="img-1" src="/Assets/wc-mini.png" alt="">
+            <img class="img-1" src="../Assets/wc-mini.png" alt="">
         </div>
 
 
@@ -160,7 +160,7 @@
                     <input class="txt-15" type="email" placeholder="example@email.com"><br>
 
                     <label  for="">Name</label><br>
-                    <input class="txt-15" type="text" placeholder="full name"><br>
+                    <input class="txt-15" type="text" placeholder="full name"><br>+
                     <label for="">Message</label><br>
                     <textarea class="txt-16" name="" id="" col="30" rows="10" placeholder="write your message"></textarea>
                     <br><input:Submit class="uni-btn btn-7">Submit</input:Submit>
