--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </h6>
                 <a href=""><button class="btn-3 uni-btn raleway-font">Launch Live Preview</button></a>
             </div>
-            <img class="img-1" src="../Assets/wc-mini.png" alt="">
+            <img class="img-1" src="./Assets/wc-mini.png" alt="">
         </div>
 
 
