--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@
                 bring your vision to life.</h4>
         </div>
         <div class="btn-5">
-            <a href="">Home</a>
-            <a class="fot-btn" href="">About</a>
-            <a class="fot-btn" href="">How to Works</a>
-            <a class="fot-btn" href="">Service</a>
+            <a class="btn-9" href="">Home</a>
+            <a class="fot-btn btn-9" href="">About</a>
+            <a class="fot-btn btn-9" href="">How to Works</a>
+            <a class="fot-btn btn-9" href="">Service</a>
         </div>
     </footer>
 </body>
