--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
                         <h2 class="txt-6">Loved by Designers</h2>
                         <p class="txt-7">This template instantly leveled up our presence.” – Studio Vertex</p>
                     </div>
-                    <div class="txt-5">
+                    <div class="cnt-7">
                         <img class="img-2" src="/Assets/avatar.png" alt="">
                         <div>
-                            <h3>Sarah Miller</h3>
-                            <h4>Date: 01-02-23</h4>
+                            <h3 class="txt-12">Sarah Miller</h3>
+                            <h4 class="txt-13">Date: 01-02-23</h4>
                         </div>
                     </div>
                 </div>
@@ -105,11 +105,11 @@
                         <h2 class="txt-6">Loved by Designers</h2>
                         <p class="txt-7">This template instantly leveled up our presence.” – Studio Vertex</p>
                     </div>
-                    <div class="txt-5">
+                    <div class="cnt-7">
                         <img class="img-2" src="/Assets/avatar.png" alt="">
                         <div>
-                            <h3>David Williams</h3>
-                            <h4>Date: 12-05-24</h4>
+                            <h3 class="txt-12">David Williams</h3>
+                            <h4 class="txt-13">Date: 12-05-24</h4>
                         </div>
                     </div>
                 </div>
@@ -125,11 +125,11 @@
                         <h2 class="txt-6">Loved by Designers</h2>
                         <p class="txt-7">This template instantly leveled up our presence.” – Studio Vertex</p>
                     </div>
-                    <div class="txt-5">
+                    <div class="cnt-7">
                         <img class="img-2" src="/Assets/avatar.png" alt="">
                         <div>
-                            <h3>Michael Johnson</h3>
-                            <h4>Date: 29-11-20</h4>
+                            <h3 class="txt-12">Michael Johnson</h3>
+                            <h4 class="txt-13">Date: 29-11-20</h4>
                         </div>
                     </div>
                 </div>
@@ -160,7 +160,7 @@
                     <input class="txt-15" type="email" placeholder="example@email.com"><br>
 
                     <label  for="">Name</label><br>
-                    <input class="txt-15" type="text" placeholder="full name"><br>+
+                    <input class="txt-15" type="text" placeholder="full name"><br>
                     <label for="">Message</label><br>
                     <textarea class="txt-16" name="" id="" col="30" rows="10" placeholder="write your message"></textarea>
                     <br><input:Submit class="uni-btn btn-7">Submit</input:Submit>
